Catalyst spelling correction

--- a/source/work/catalyst.html.haml
+++ b/source/work/catalyst.html.haml
@@ -66,7 +66,7 @@
             = image_tag('work/catalyst-form-mobile.jpg', {:alt => 'Catalyst Form Screen'})
       .item-text
         %h3 Interest Landing Page
-        %p This product was unqiue for Ignite. Unlike the rest of our products, it was not technology reliant. The only piece of technology it could use was a landing page for new sign-ups. This would often be included in promotional emails, as it helped employees convince company executives to make this investment in their team and themselves.
+        %p This product was unique for Ignite. Unlike the rest of our products, it was not technology reliant. The only piece of technology that was a nice-to-have was a landing page for new sign-ups. This would often be included in promotional emails, as it helped employees convince company executives to make this investment in their team and themselves.
         %p My original task for this site was to assist in the front-end development needs; however, when building this page I couldn't help but think something was missing. Instead of a static photo of the space, why not capture and share a bit of the experience?
         %p After making a suggestion to create a looping background video, I was nominated for the task and we shot our next workshop to gather footage.
         %cite
