Catalyst grammar corrections

--- a/source/work/catalyst.html.haml
+++ b/source/work/catalyst.html.haml
@@ -9,8 +9,8 @@
         %h5 Innovation Workshops
         %p
           %a{:href => "http://www.ignitewithus.com/products/catalyst", :target => "_blank"}Catalyst workshops
-          facilitated a creative, safe, and exciting environment for teams to come together to define and prioritize specific problems. Our exercises brought out the voices in teams to generate potential solutions to these problems. We then experimented and evaluated those solutions to determine a project plan to implement the best solution for the business.
-        %p Each session included fun team-building activities which lead to real business outcomes.
+          facilitated a creative, safe, and exciting environment for teams to come together to define and prioritize specific problems. Our exercises brought out the voices in teams by generating groundbreaking ideas. We then experimented and evaluated the solutions to develop a project plan to implement the best results for the business.
+        %p Each session included fun teambuilding activities which led to real business outcomes.
       .item-image
         %video{ :id => "video", :loop => "true", :autoplay => "true", :poster => image_path('work/catalyst-devices.jpg')}
           %source{ :src => image_path('videos/catalyst-devices.mp4'), :type => "video/mp4"}
@@ -35,7 +35,7 @@
         %p
           %a{:href => "https://www.communityfirstfl.org/", :target => "_blank"}Community First
           was one of the great forward-thinking businesses who participated in a 2-day session.
-        %p We lead the group through many different design thinking exercises including creating personas, mind-mapping, and brainstorming. We wanted to provide participants with a new user-centric way of thinking when returning to their daily routine.
+        %p We led the group through many different design thinking exercises including creating personas, mind-mapping, and brainstorming. We wanted to provide participants with a new user-centric way of thinking when returning to their daily routine.
         %cite
           %ul
             %li
@@ -66,9 +66,9 @@
             = image_tag('work/catalyst-form-mobile.jpg', {:alt => 'Catalyst Form Screen'})
       .item-text
         %h3 Interest Landing Page
-        %p This product was unique for Ignite. Unlike the rest of our products, it was not technology reliant. The only piece of technology that was a nice-to-have was a landing page for new sign-ups. This would often be included in promotional emails, as it helped employees convince company executives to make this investment in their team and themselves.
-        %p My original task for this site was to assist in the front-end development needs; however, when building this page I couldn't help but think something was missing. Instead of a static photo of the space, why not capture and share a bit of the experience?
-        %p After making a suggestion to create a looping background video, I was nominated for the task and we shot our next workshop to gather footage.
+        %p Catalyst was unique for Ignite. Unlike the rest of our products, it was not technology reliant. The only necessary digital piece was the landing page for new sign-ups. The webpage would often be included in promotional emails, as it helped employees convince company executives to make an investment in their team and themselves.
+        %p My original task for this site was to assist with front-end development, however, when building the page I felt a vital piece was missing. Instead of a static photo of the space, why not capture and share a bit of the experience?
+        %p After making a suggestion to create a looping video as the background, I was nominated for the task and we shot our next workshop to gather footage.
         %cite
           %ul
             %li
