--- a/source/work/wayfind.html.haml
+++ b/source/work/wayfind.html.haml
@@ -249,7 +249,7 @@
         .wayfind-twentysix.hide
           = image_tag('work/wayfind-usertesting-interview-summaries.jpg', {:alt => 'Interview Summaries'})
         .wayfind-twentyseven
-          = image_tag('work/wayfind-usertesting-actionable-steps.jpg', {:alt => 'Actionable Steps from User Interviews'})
+          = image_tag('work/wayfind-usertesting-actionable-steps.jpg', {:alt => 'Actionable Steps from the User Interviews'})
         .wayfind-twentyeight.hide
           = image_tag('work/wayfind-usertesting-lookbackio-recordings.jpg', {:alt => 'Lookback.io Recordings'})
         .wayfind-twentynine.hide
@@ -259,15 +259,15 @@
         %p User tests we conducted made us aware of multiple issues users were dealing with during our onboarding process; including, progress slider click area being too small, unclear active skills, and hidden progression buttons below the fold.
         %p
           All interviews were documented using a custom folder structure on
-          %a{:href => "https://lookback.io/dashboard", :target => "_blank"}Google Drive
+          %a{:href => "https://www.google.com/drive/", :target => "_blank"}Google Drive
           &period; There you could find raw notes, summaries, actionable tasks, and learnings. We used
-          %a{:href => "https://lookback.io/dashboard", :target => "_blank"}Lookback.io
+          %a{:href => "https://lookback.io/", :target => "_blank"}Lookback.io
           to record the sessions, allowing us to record both the screen and camera at once.
         %select.div-toggler{'data-target' => '.wayfind-toggle-3'}
           %option{'data-show' => '.wayfind-twentyfour', :value => 'wayfind-twentyfour'} Station Setup
           %option{'data-show' => '.wayfind-twentyfive', :value => 'wayfind-twentyfive'} Google Drive Folders
           %option{'data-show' => '.wayfind-twentysix', :value => 'wayfind-twentysix'} Interview Summaries
-          %option{'data-show' => '.wayfind-twentyseven', :value => 'wayfind-twentyseven', :selected => 'selected'} Actionable Steps from User Interviews
+          %option{'data-show' => '.wayfind-twentyseven', :value => 'wayfind-twentyseven', :selected => 'selected'} Actionable Steps from the User Interviews
           %option{'data-show' => '.wayfind-twentyeight', :value => 'wayfind-twentyeight'} Lookback.io Recordings
           %option{'data-show' => '.wayfind-twentynine', :value => 'wayfind-twentynine'} Lookback.io Watch
     %article.image
