--- a/source/assets/stylesheets/pages/_project.sass
+++ b/source/assets/stylesheets/pages/_project.sass
@@ -48,6 +48,29 @@ section.m-project-layout
         +rem(margin-right, 0px)
         +rem(margin-bottom, 100px)
         +rem(margin-left, 0px)
+        &.full
+          .item-image
+            +span-columns(12)
+            img
+              box-shadow: none
+          .item-text
+            +span-columns(6)
+            +shift(3)
+            text-align: center
+            +rem(padding-top, 0px)
+            +tablet
+              +span-columns(8)
+              +shift(2)
+            +mobile
+              +span-columns(12)
+              +shift(0)
+              text-align: left
+            select
+              margin-left: auto
+              margin-right: auto
+              +mobile
+                margin-left: inherit
+                margin-right: inherit
         .item-image
           +span-columns(7)
           img
@@ -56,6 +79,8 @@ section.m-project-layout
             box-shadow: rem(5) rem(5) rem(5) lighten($gray, 60%)
             &.hide
               display: none
+          video
+            box-shadow: rem(5) rem(5) rem(5) lighten($gray, 60%)
           +tablet
             +span-columns(7)
           +mobile
