Additional project text links

--- a/source/work/catalyst.html.haml
+++ b/source/work/catalyst.html.haml
@@ -66,7 +66,10 @@
             = image_tag('work/catalyst-form-mobile.jpg', {:alt => 'Catalyst Form Screen'})
       .item-text
         %h3 Interest Landing Page
-        %p Catalyst was unique for Ignite. Unlike the rest of our products, it was not technology reliant. The only necessary digital piece was the landing page for new sign-ups. The webpage would often be included in promotional emails, as it helped employees convince company executives to make an investment in their team and themselves.
+        %p
+          Catalyst was unique for
+          %a{:href => "http://www.ignitewithus.com/", :target => "_blank"}Ignite
+          &period; Unlike the rest of our products, it was not technology reliant. The only necessary digital piece was the landing page for new sign-ups. The webpage would often be included in promotional emails, as it helped employees convince company executives to make an investment in their team and themselves.
         %p My original task for this site was to assist with front-end development, however, when building the page I felt a vital piece was missing. Instead of a static photo of the space, why not capture and share a bit of the experience?
         %p After making a suggestion to create a looping video as the background, I was nominated for the task and we shot our next workshop to gather footage.
         %cite
