--- a/source/work/ignite.html.haml
+++ b/source/work/ignite.html.haml
@@ -97,4 +97,13 @@
         = image_tag('work/ignite-atom.png', {:alt => 'Atom editor.'})
       .item-text
         %h3 Codebase
-        %p This Ruby on Rails project was built with HAML and SASS, running with Bourbon and Neat. I typically work split screen, allowing me to reference both my HTML and CSS or JS simultaneously. I've been using Atom as my text editor recently, as it runs nicely alongside GitHub's version management.
+        %p
+          This Ruby on Rails project was built with HAML and SASS, running with
+          %a{:href => "http://bourbon.io/", :target => "_blank"}Bourbon
+          and
+          %a{:href => "http://neat.bourbon.io/", :target => "_blank"}Neat
+          &period; I typically work split screen, allowing me to reference both my HTML and CSS or JS simultaneously. I've been using
+          %a{:href => "https://atom.io/", :target => "_blank"}Atom
+          as my text editor recently, as it runs nicely alongside
+          %a{:href => "https://github.com/", :target => "_blank"}GitHub
+          's version management.
