--- a/source/work/wayfind.html.haml
+++ b/source/work/wayfind.html.haml
@@ -9,7 +9,7 @@
         %h5 Career Pathing Tool
         %p
           %a{:href => "http://www.wayfind.to", :target => "_blank"}Wayfind
-          is a user-friendly, cloud-based application helping businesses retain and develop employees by empowering them to discover roles best suited to their personality and interests so they can create their own custom career path within their organization.
+          helps businesses retain and develop employees by empowering them to discover roles best suited to their personality and interests so they can create their own custom career path within their organization.
         %p
           Read more about how and why we choose to create this product
           %a{:href => "http://blog.ignitewithus.com/wayfind-millennial-career-path/", :target => "_blank"} here
@@ -29,6 +29,8 @@
               %a{:href => "/"}Jason Kellum
               &plus;
               %a{:href => "https://twitter.com/amberaultman", :target => "_blank"}Amber Aultman
+              &plus;
+              %a{:href => "http://www.daniloquilaton.com/", :target => "_blank"}Danilo Quilaton
             %li
               Development:
               %a{:href => "https://www.linkedin.com/pub/mark-montroy/3/168/841", :target => "_blank"}Mark Montroy
@@ -277,7 +279,7 @@
           All interviews were documented using a custom folder structure on
           %a{:href => "https://www.google.com/drive/", :target => "_blank"}Google Drive
           where colleagues could find raw notes, summaries, and links to recordings. We used
-          %a{:href => "https://lookback.io/", :target => "_blank"}Lookback.io
+          %a{:href => "https://lookback.io/", :target => "_blank"}Lookback
           to record the sessions allowing us to capture both the screen and camera at once.
         %select.div-toggler{'data-target' => '.wayfind-toggle-3'}
           %option{'data-show' => '.wayfind-twentyfour', :value => 'wayfind-twentyfour'} Station Setup
@@ -297,7 +299,7 @@
         %p
           An observation we learned from our user tests was a lack of action to be taken after choosing a role or successfully creating a plan. To resolve this we experimented with adding open positions to select roles, accessible from the role details and plan overview pages. These were roles that may have slightly different titles but would provide similar experience which they could immediately apply for.
         %p
-          Additionally we created an open positions email notifying users if any of their saved roles or plans had a new job listing. This could either send out in real time, weekly, or monthly depending on a preference chosen by the user.
+          Additionally we created an open positions email notifying users if any of their saved roles or plans had a new job listing. This could either send out in real-time, daily, or weekly depending on a preference chosen by the user.
     %article.image.full
       .item-image.wayfind-toggle-4
         .wayfind-thirty.hide
